<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/mqw_logo_small"
        android:scaleType="fitXY"/>
    <Button
        android:id="@+id/btn_daftar_kantin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/daftar_kantin"
        />
    <Button
        android:id="@+id/btn_favorites"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/favorites" />
    <Button
        android:id="@+id/btn_faq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/faq" />
    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:text="@string/help" />


</LinearLayout>