<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/kantin1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:text="@string/kantin1"
                />
            <Button
                android:id="@+id/kantin2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:text="@string/kantin2" />
            <Button
                android:id="@+id/kantin3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:text="@string/kantin3" />
            <Button
                android:id="@+id/kantin4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:text="@string/kantin4" />
        </LinearLayout>
</ScrollView>